# srcerr

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
examples/: codespan.rs  html.rs  long_expr_context.json  long_expr_context.rs  simple.rs  simple.toml  source_ref_hint.rs  source_ref_hint.yaml  source_ref_hint_inline.rs
src/: expr.rs  expr_context.rs  fmt.rs  formatter.rs  lib.rs  model.rs  relevant_source.rs  source_error.rs  source_highlighted.rs  span.rs  suggestion.rs
src/fmt/: code.rs  note.rs
src/formatter/: ansi_color_formatter.rs  plain_text_formatter.rs  source_error_formatter.rs  styler.rs
src/formatter/ansi_color_formatter/: ansi_color_styler.rs
src/formatter/plain_text_formatter/: plain_text_styler.rs
src/model/: error_code.rs  error_detail.rs  expr.rs  expr_context.rs  expr_highlighted.rs  highlight_level.rs  severity.rs  source_error.rs  source_highlighted.rs  source_ref_hint.rs  span.rs  suggestion.rs
