[package]
name = "srcerr"
version = "0.4.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "User friendly errors from source data."
repository = "https://github.com/azriel91/srcerr"
documentation = "https://docs.rs/srcerr/"
readme = "README.md"
keywords = ["error", "format"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
features = ["codespan"]

[dependencies]
codespan = { version = "0.11.1", optional = true }
codespan-reporting = "0.11.1"

[features]
serialization = ["codespan-reporting/serialization"]

[[example]]
name = "codespan"
required-features = ["codespan"]
